@@ -1,4 +1,4 @@
-source "http://rubygems.org"
+source "https://rubygems.org"
 
 case ENV["ADAPTER"]
 when nil, "active_record"
@@ -6,7 +6,7 @@ when nil, "active_record"
     gem "activerecord-jdbcsqlite3-adapter", :platform => "jruby"
     gem "sqlite3", :platform => "ruby"
   end
-  gem "activerecord", ">= 3.1.0", :require => "active_record"
+  gem "activerecord", ">= 3.2.0", :require => "active_record"
 when "mongoid"
   gem "mongoid", ">= 3.1"
   gem "bson_ext", :platform => "ruby"
