@@ -1,4 +1,5 @@
 = 3.3 (not released yet)
+* <b>DEPRECATION NOTICE:</b>Rails 3.1 support dropped: if you use Rails 3.1, please stick to rolify 3.2
 * code cleanup in finders methods
 * generators rewritten entirely. now using ActiveRecord/Mongoid model generator to create Role model
 * added rspec matchers for detailed spec error messages (thanks to @delwyn)
@@ -12,7 +13,7 @@
 * now raises a warning in the initializer if migration has not been run
 * add support for primary key different than 'id' for resource Model (thanks to @rafaeldl)
 * Rails 4 (thanks to @adammathys) and ruby 2.0 compliant
-* configured travis-ci to run the specs on Rails 3.1/3.2/4.0 and Rubies 1.9.3/2.0/rbx/jruby
+* configured travis-ci to run the specs on Rails 3.2/4.0 and Rubies 1.9.3/2.0/rbx/jruby
 * added code climate to check for code smell
 
 = 3.2 (Aug 7, 2012)
